[package]
name = "qgsd-multiplexer"
version = "0.1.0"
authors = ["Xynnn007"]
publish = false
edition = "2021"

[[bin]]
name = "qgsd-multiplexer"
path = "bin/main.rs"
required-features = [ "tokio/rt-multi-thread", "tokio/macros", "main" ]

[dependencies]
anyhow = "1"
clap = { version = "3.2.6", features = ["derive"], optional = true }
env_logger = "0.10.0"
futures = "0.3.25"
inotify = "0.10.0"
log = "0.4.17"
tokio = { version = "1.0", features = [ "process", "io-util", "rt", "macros", "sync", "fs" ] }
tokio-stream = { version = "0.1.11", features = [ "net" ] }

[dev-dependencies]

[build-dependencies]
tonic-build = { version = "0.8.0", optional = true }

[features]
main = [ "clap" ]
